# PRISM-Protocol

./: .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.mjs  litepaper.tex  next.config.mjs  package-lock.json  package.json  pitch-deck-20260511-155602.html  pitch-deck-20260511-173017.html  pnpm-lock.yaml  pnpm-lock.yaml.bak  read-the-issue-3-cheeky-pizza.md  skills-lock.json  sync-idl.sh  tsconfig.json  tsconfig.tsbuildinfo
.claude/: settings.local.json
app/: buffer-polyfill.ts  globals.css  layout.tsx  page.tsx
contracts/: .env.example  .gitignore  Anchor.toml  Cargo.toml  build-and-deploy.sh  check_balances.sh  continue_deploy.sh  deploy.sh  deploy_core.sh  do_deploy.sh  fresh_deploy.sh  fresh_deploy.sh.bak  fund-sol.ts  fund-wallets.sh  package-lock.json  package.json  reset_and_deploy.sh  tsconfig.json
contracts/programs/prism-amm/: Cargo.toml
contracts/programs/prism-amm/src/: errors.rs  events.rs  lib.rs  pda.rs  state.rs
contracts/programs/prism-amm/src/instructions/: add_liquidity.rs  initialize_pool.rs  remove_liquidity.rs  swap.rs
doc-website/: .gitignore  .mintignore  README.md  blog.mdx  compliance-posture.mdx  core-operations.mdx  core-protocol-layer.mdx  docs.json  docusaurus.config.ts  edge-case-handling.mdx  faq.mdx  financial-model.mdx  glossary.mdx  index.mdx  integrity-layer.mdx  market-design.mdx  package-lock.json  package.json  risk-market-layer.mdx  roadmap.mdx  security-controls.mdx  sidebars.ts  sourcing-layer.mdx  style.css  surface-layer.mdx  system-architecture.mdx  token-model.mdx  tsconfig.json  vercel.json
(+355 files in other folders)
