[package]
name = "prism-amm"
version = "0.1.0"
description = "PRISM Protocol — AMM for tranche tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prism_amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
